# mbit

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CROSS_COMPILATION.md  DEBUGGING.md  DEVELOPMENT.md  INDEX.md  USER_GUIDE.md
scripts/: bump_version.sh  check_version.sh
src/: build.rs  lib.rs  main.rs  mcp.rs  runner.rs  sse.rs  test_bench.rs
